dim/spec/test_input/invalid_input/modules/duplicate_meta1.dim
module: ABC

metadata: Description 1
